--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 </article>
 
                 <article class="bg-white rounded-xl shadow-lg hover:shadow-2xl transition-shadow duration-300 p-6 flex flex-col h-full">
-                    <img src="uf +UV.jpg" alt="UV and UF combo" class="img-ratio rounded-lg mb-4" />
+                    <img src="uf uv.jpg" alt="UV and UF combo" class="img-ratio rounded-lg mb-4" />
                     <h4 class="text-xl font-bold text-gray-800 mb-2">UV + UF Combo</h4>
                     <p class="text-gray-600 text-sm flex-grow mb-4">UF filtration followed by UV disinfection for an extra layer of safety.</p>
                     <ul class="text-sm space-y-2 text-gray-700 mb-6">
